edit css to fix issues with the like buttons z-index and the items page height

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -122,7 +122,7 @@ input[type="text"]:focus,
     height: 3rem;
     width: 3rem;
     border-radius: 50%;
-    z-index: 200;
+    z-index: 10;
        background-color: #D1D1C7;
 }
 
